--- a/registro.html
+++ b/registro.html
@@ -18,7 +18,7 @@
         <div class="col-md-6">
           <form class="form-custom border p-4 rounded" action="" method="post">
             <h1 class="mb-4">
-              ¿Preparado para encontrar tu próxima<span class="text-primary">
+              ¿Preparado para encontrar tu próxima<span class="titulo">
                 oportunidad</span
               >?
             </h1>
@@ -116,7 +116,7 @@
                 >
               </div>
               <div class="d-grid">
-                <button type="submit" class="btn btn-primary">
+                <button type="submit" class="btn btn-primary" style="background-color: #2c9bc7;">
                   Crear Cuenta
                 </button>
               </div>
